# SDL2MechGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  level1.json  level1.tmx
SKETCHES/: Sprite-0003.json  Sprite-0004.aseprite  control.aseprite  triangle-dude.aseprite
cmake/: FindEigen.cmake  FindTMXLITE.cmake
maps/: happy.tsx  level1.tmx  level2.tmx
resources/: SamuraiShowdownSamurai.json  Sprite-0001.aseprite  background.aseprite
resources/SKETCHES/: SamuraiShowdownSamurai.json  Sprite-0003.aseprite  Sprite-0003.json  Sprite-0004.json  control.json
src/: Dot.cpp  Dot.h  Entity.h  EntityManager.cpp  EntityManager.h  LTexture.cpp  LTexture.h  Particle.cpp  Particle.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Box2DSpecific/: ContactListener.cpp  ContactListener.h
src/Component/: Acceleration.cpp  Acceleration.h  Animation.h  Background.h  BoundingBox.h  Bullet.h  DebugRenderable.h  Dynamic.h  Enemy.h  Floor.h  Frame.h  Health.h  Platform.h  Player.h  Position.h  Renderable.h  Sprite.h  TileComponent.h  Velocity.h
src/Enums/: MovementEnum.h
src/EventHandler/: InputHandler.cpp  InputHandler.h
src/Physic/: BodyFactory.cpp  BodyFactory.h  ContactListener.cpp  ContactListener.h
src/Render/: RenderLayer.cpp  RenderLayer.h
src/System/: AttackSystem.cpp  AttackSystem.h  BulletDestroyerSystem.cpp  BulletDestroyerSystem.h  EnemyMovementSystem.cpp  EnemyMovementSystem.h  GameProgressSystem.cpp  GameProgressSystem.h  HealthSystem.cpp  HealthSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicSystem.h  RenderSystem.cpp  RenderSystem.h
src/Utils/: AnimationLoader.cpp  AnimationLoader.h  BackgroundLoader.cpp  BackgroundLoader.h  BitMaskUtil.h  CoordTranslator.cpp  CoordTranslator.h  GameWorldInitiator.cpp  GameWorldInitiator.h  MouseUtil.cpp  MouseUtil.h  PrefabsFactory.cpp  PrefabsFactory.h  TextureUtils.cpp  TextureUtils.h
src/Utils/Factories/: BodiesFactory.cpp  BodiesFactory.h  PrefabsFactory.cpp  PrefabsFactory.h
